# etude

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
server/: Dockerfile  conftest.py  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py
server/app/: __init__.py  celery_app.py  config.py  dependencies.py  main.py
server/app/api/v1/: __init__.py  artifacts.py  auth.py  health.py  ir.py  jobs.py
server/app/core/: __init__.py  security.py  state_machine.py
server/app/db/: __init__.py  base.py  session.py  types.py
server/app/models/: __init__.py  artifact.py  artifact_lineage.py  job.py  user.py
server/app/schemas/: __init__.py  artifact.py  job.py  user.py
server/app/schemas/symbolic_ir/: __init__.py  version_registry.py
server/app/schemas/symbolic_ir/v1/: __init__.py  confidence.py  grouping.py  metadata.py  (+4 more)
server/app/services/: __init__.py  artifact_service.py  fingering_client.py  ir_service.py  job_service.py  omr_client.py  omr_processor.py  storage_service.py
server/app/tasks/: __init__.py  fingering_tasks.py  rendering_tasks.py
server/tests/: __init__.py  test_api.py  test_artifacts_api.py  test_fingering_client.py  test_fingering_integration.py  test_fingering_tasks.py  test_models.py  test_omr_integration.py  test_rendering_integration.py
server/tests/fixtures/symbolic_ir/: minimal_ir_v1.json  realistic_ir_v1.json
server/tests/test_symbolic_ir/: __init__.py  test_api.py  test_ir_service.py  test_ir_v2_schemas.py  test_schemas.py  test_serialization.py
(+149 files in other folders)
